--- a/proxy-server/package.json
+++ b/proxy-server/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "azure-proxy-server",
+  "name": "proxy-server",
   "version": "1.0.0",
+  "description": "Azure API Proxy Server",
   "main": "proxy-server.js",
   "scripts": {
-    "start": "node proxy-server.js"
+    "start": "node proxy-server.js",
+    "dev": "nodemon proxy-server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "dotenv": "^17.1.0",
+    "express": "^4.18.2",
     "node-fetch": "^2.7.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "proxy",
+    "azure",
+    "api"
+  ],
+  "author": "",
+  "license": "ISC"
 }
