--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -13,46 +13,38 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
-
+        
       - name: 'Login to Azure'
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+          
       - name: 'Login to Container Registry'
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ env.REGISTRY_LOGIN_SERVER }}
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-
+          
       - name: 'Build and push Docker image (latest tag)'
         run: |
           docker build . -t ${{ env.REGISTRY_LOGIN_SERVER }}/test-scenario-generator:latest
           docker push ${{ env.REGISTRY_LOGIN_SERVER }}/test-scenario-generator:latest
-
-      - name: 'Set Azure App Service Environment Variables'
-        run: |
-          az webapp config appsettings set \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name ${{ env.AZURE_WEBAPP_NAME }} \
-            --settings \
-              VITE_AZURE_OPENAI_API_KEY="${{ secrets.VITE_AZURE_OPENAI_API_KEY }}" \
-              VITE_AZURE_OPENAI_ENDPOINT="${{ secrets.VITE_AZURE_OPENAI_ENDPOINT }}" \
-              VITE_AZURE_OPENAI_API_VERSION="${{ secrets.VITE_AZURE_OPENAI_API_VERSION }}" \
-              VITE_AZURE_SEARCH_API_KEY="${{ secrets.VITE_AZURE_SEARCH_API_KEY }}" \
-              VITE_AZURE_SEARCH_ENDPOINT="${{ secrets.VITE_AZURE_SEARCH_ENDPOINT }}" \
-              VITE_AZURE_SEARCH_INDEX_NAME="${{ secrets.VITE_AZURE_SEARCH_INDEX_NAME }}" \
-              VITE_GPT_MODEL_NAME="${{ secrets.VITE_GPT_MODEL_NAME }}" \
-              VITE_EMBEDDING_MODEL_NAME="${{ secrets.VITE_EMBEDDING_MODEL_NAME }}" \
-              VITE_MAX_FILE_SIZE="${{ secrets.VITE_MAX_FILE_SIZE }}" \
-              VITE_SUPPORTED_CODE_EXTENSIONS="${{ secrets.VITE_SUPPORTED_CODE_EXTENSIONS }}" \
-              VITE_USE_PROXY="${{ secrets.VITE_USE_PROXY }}"
-
+          
+      # 🔥 이 부분 제거! Azure App Service에 이미 환경변수가 설정되어 있으므로
+      # - name: 'Set Azure App Service Environment Variables'
+      #   run: |
+      #     az webapp config appsettings set \
+      #       --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+      #       --name ${{ env.AZURE_WEBAPP_NAME }} \
+      #       --settings \
+      #         VITE_AZURE_OPENAI_API_KEY="${{ secrets.VITE_AZURE_OPENAI_API_KEY }}" \
+      #         ...
+          
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         with:
