--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,7 @@
 # Dockerfile.frontend
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
 FROM node:18-alpine AS build
 
 WORKDIR /app
