--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.frontend
+      args:
+      - VITE_API_BASE_URL=http://proxy-server:3001
     ports:
       - "3000:3000"
     environment:
