--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -3,8 +3,6 @@ name: Deploy to Azure Web App
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 env:
   AZURE_WEBAPP_NAME: dopaminesun-web-app
@@ -13,40 +11,40 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: 'Login to Azure'
+
+      - name: Log in to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          
-      - name: 'Login to Container Registry'
+
+      - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          login-server: ${{ env.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-          
-      - name: 'Build and push Docker image (latest tag)'
+
+      - name: Build Docker images via Docker Compose
         run: |
-          docker build . -t ${{ env.REGISTRY_LOGIN_SERVER }}/test-scenario-generator:latest
-          docker push ${{ env.REGISTRY_LOGIN_SERVER }}/test-scenario-generator:latest
-          
-      # 🔥 이 부분 제거! Azure App Service에 이미 환경변수가 설정되어 있으므로
-      # - name: 'Set Azure App Service Environment Variables'
-      #   run: |
-      #     az webapp config appsettings set \
-      #       --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-      #       --name ${{ env.AZURE_WEBAPP_NAME }} \
-      #       --settings \
-      #         VITE_AZURE_OPENAI_API_KEY="${{ secrets.VITE_AZURE_OPENAI_API_KEY }}" \
-      #         ...
-          
-      - name: 'Deploy to Azure Web App'
+          docker-compose -f docker-compose.yml build
+
+      - name: Tag and push frontend
+        run: |
+          docker tag your-app_frontend:latest ${{ env.REGISTRY_LOGIN_SERVER }}/frontend:latest
+          docker push ${{ env.REGISTRY_LOGIN_SERVER }}/frontend:latest
+
+      - name: Tag and push proxy-server
+        run: |
+          docker tag your-app_proxy-server:latest ${{ env.REGISTRY_LOGIN_SERVER }}/proxy-server:latest
+          docker push ${{ env.REGISTRY_LOGIN_SERVER }}/proxy-server:latest
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          images: ${{ env.REGISTRY_LOGIN_SERVER }}/test-scenario-generator:latest
+          images: |
+            ${{ env.REGISTRY_LOGIN_SERVER }}/frontend:latest
