--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,10 +1,13 @@
 # Dockerfile.frontend
-ARG VITE_API_BASE_URL
-ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
+# 1단계: Vite 앱 빌드
 FROM node:18-alpine AS build
 
 WORKDIR /app
+
+# 환경변수 받기
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 # 의존성 설치
 COPY package*.json ./
@@ -13,20 +16,17 @@ RUN npm ci
 # 소스 코드 복사
 COPY . .
 
-# 빌드 (프로덕션용)
-RUN npm run build
+# 👉 .env 없이 Vite에 환경변수 넘기려면 export해서 빌드해야 함
+RUN VITE_API_BASE_URL=$VITE_API_BASE_URL npm run build
 
-# 프로덕션 이미지
+# 2단계: Nginx에 정적 파일 배포
 FROM nginx:alpine
 
 # Nginx 설정 복사
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# 빌드된 파일 복사
+# 빌드 결과 복사
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# 포트 노출
 EXPOSE 3000
-
-# Nginx 시작
 CMD ["nginx", "-g", "daemon off;"]
