docker-compose에서 이미지명 명시

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - app-network
 
   frontend:
+    image: dopaminesun.azurecr.io/frontend:latest
     build:
       context: .
       dockerfile: Dockerfile.frontend
