--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,3 @@
-# Dockerfile.frontend
-
 # 1단계: Vite 앱 빌드
 FROM node:18-alpine AS build
 
@@ -28,5 +26,10 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # 빌드 결과 복사
 COPY --from=build /app/dist /usr/share/nginx/html
 
+# Azure App Service를 위한 시작 스크립트 생성
+RUN echo '#!/bin/sh' > /start.sh && \
+    echo 'nginx -g "daemon off;"' >> /start.sh && \
+    chmod +x /start.sh
+
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["./start.sh"]
