--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -26,10 +26,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # 빌드 결과 복사
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Azure App Service를 위한 시작 스크립트 생성
-RUN echo '#!/bin/sh' > /start.sh && \
-    echo 'nginx -g "daemon off;"' >> /start.sh && \
-    chmod +x /start.sh
+EXPOSE 80
 
-EXPOSE 3000
-CMD ["./start.sh"]
+# 직접 nginx 실행 (daemon off는 nginx.conf에 설정됨)
+CMD ["nginx"]
