--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,23 +20,21 @@ services:
       - app-network
 
   frontend:
-    image: dopaminesun.azurecr.io/frontend:latest
     build:
       context: .
       dockerfile: Dockerfile.frontend
       args:
-        VITE_API_BASE_URL: http://proxy-server:3001
+        # 배포 환경에서는 실제 proxy-server URL 사용
+        VITE_API_BASE_URL: https://dopaminesun-proxy-server-fzchhgguezd9gxdv.eastus2-01.azurewebsites.net
     ports:
-      - "3000:3000"
+      - "80:80"
     environment:
       NODE_ENV: production
-      VITE_API_BASE_URL: http://proxy-server:3001
+      VITE_API_BASE_URL: https://dopaminesun-proxy-server-fzchhgguezd9gxdv.eastus2-01.azurewebsites.net
     depends_on:
       - proxy-server
     networks:
       - app-network
-    # Azure App Service를 위한 명령어 지정
-    command: ["nginx", "-g", "daemon off;"]
 
 networks:
   app-network:
