nginx api 호출 설정 변경

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,21 @@ http {
         listen 80;
         server_name localhost;
         
+        # API 요청을 proxy-server로 전달
+        location /api {
+            proxy_pass https://dopaminesun-server-dycxgacfcmbcc2ec.eastus2-01.azurewebsites.net;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # CORS 헤더 (필요시)
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
+        }
+        
+        # 정적 파일 서빙 (React 앱)
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
